2011-09-14  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/DataServer.pm: Fixed a weird problem resolving GPS
	coordinates with OpenStreet.

	* lib/PandoraFMS/NmapParser.pm: Avoid warning messages.

2011-09-12  Sancho Lerena <slerena@artica.es>

	* util/pandora_remote_agent.sh: New remote agent script to do customized
	deployments creating XML files from external scriptfiles. See docs.

2011-09-12  Vanessa Gil  <vanessa.gil@artica.es>

	* pandora_server/util/pandora_manage.pl: Applied Kosaka's patch to store
	data in DB with encoding in HTML entities.


2011-09-12  Dario Rodriguez <dario.rodriguez@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed some problems with the script.

2011-09-12  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control: Updated version to 4.0 (final).

	* pandora_server.spec: Updated version. Added mibs package 
	for dependency (Snmp mibs needed to be installed!), without
	that, network server and some scripts won't run properly.

	* pandora_server.redhat.spec,
	lib/PandoraFMS/Config.pm: Updated version to 4.0 final.

2011-09-12  Dario Rodriguez <dario.rodriguez@artica.es>

	* DEBIAN/control: Added dependence of snmp-mibs-downloader
	* pandora_server_installer: Added dependence of snmp-mibs-downloader

2011-09-08  Sancho Lerena <slerena@artica.es>

	*  lib/PandoraFMS/Network.pm: Missing include for function
	SNMP::translateObj. Added SNMP include: I don't understand why that
	was missing ¿?.
		
2011-09-06  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed action search for event alerts.

2011-09-06  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NmapParser.pm: Remove nmap warnings from output.

2011-09-05  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Disable ICMP and SNMP enterprise servers
	  by default.

2011-09-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm, lib/PandoraFMS/Core.pm: Fixed policy queue (was
	  not working properly).
