@@ -1,3 +1,8 @@
+2011-09-15  Vanessa Gil  <vanessa.gil@artica.es>
+
+	* pandora_server/util/pandora_manage.pl: Fixed bad behaviour of several
+	Pandora CLI options.
+
 2011-09-14  Sancho Lerena <slerena@artica.es>
 
 	* lib/PandoraFMS/DataServer.pm: Fixed a weird problem resolving GPS
